Bug 147911 - F1 (Help) for all context menu items for templates in Template Manager have no links to relevant help page entries
Summary: F1 (Help) for all context menu items for templates in Template Manager have n...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Documentation (show other bugs)
Version:
(earliest affected)
7.4.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Rafael Lima
URL:
Whiteboard: target:24.2.0
Keywords:
Depends on:
Blocks: Help-Link
  Show dependency treegraph
 
Reported: 2022-03-10 16:25 UTC by sdc.blanco
Modified: 2023-07-23 22:49 UTC (History)
1 user (show)

See Also:
Crash report or crash signature: 146734 147910


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description sdc.blanco 2022-03-10 16:25:41 UTC
Steps to reproduce:
1. Open Template Manager (Ctrl+Shift+N)
2. Right-click on a template (preferably a user-defined template, to get full range of popup menu items), place mouse on an entry in popupmenu, press F1

Actual:  not found
Expected: go to relevant entry in help page

https://help.libreoffice.org/7.4/en-US/text/shared/guide/template_manager.html
Comment 1 Olivier Hallot 2022-08-08 20:53:10 UTC
The F1 key is inactive in this context menu. 

Need to look at the XML of the right context menu.
Comment 2 Olivier Hallot 2023-02-15 00:07:20 UTC
9:17:02ohallotHow can I know the UNO command that is displayed in the context menu of the selected template in the Template Manager dialog (e.g. Open, Edit, Set as Default, Move, Export... )

20:06:46thorstenohallot: looks like popup gets generated on the fly inside TemplateDlgLocalView::createContextMenu()

21:06:04ohallotthorsten: Thanks.
Comment 3 Rafael Lima 2023-07-19 17:45:37 UTC
In TemplateDlgLocalView::createContextMenu() the popup menu referred to by mxContextMenu is a weld::Menu object, which does not support set_help_id.

See its definition in:
/core/include/vcl/weld.hxx
Comment 4 Commit Notification 2023-07-23 13:07:28 UTC
Rafael Lima committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/65c91bd5aa6f9b68390739a0e027d23c8a32da08

tdf#147911 Implement set_item_help_id for context menu items

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2023-07-23 22:22:37 UTC
Rafael Lima committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/help/commit/69cb2215657f692c62a564d3a4926d3272757fc9

tdf#147911 Add target HIDs for Template Manager context menu